--- a/dxapp.json
+++ b/dxapp.json
@@ -1,11 +1,11 @@
 {
-	"name": "tso500_output_parser_v1.0",
-	"title": "tso500_output_parser_v1.0",
+	"name": "tso500_output_parser_v1.1",
+	"title": "tso500_output_parser_v1.1",
 	"summary": "Parse the output of the TSO500 app and set off jobs",
 	"tags": [
 	],
 	"properties": {
-	"github release": "v1.0"
+	"github release": "v1.1"
 	},
 	"dxapi": "1.0.0",
 	"inputSpec": [
@@ -49,6 +49,12 @@
 	"name": "multiqc_app_id",
 	"label": "multiqc_app_id",
 	"help": "the id of the multiqc applet in format project-abc:applet123",
+	"class": "string"
+	},
+	{
+	"name": "upload_multiqc_app_id",
+	"label": "upload_multiqc_app_id",
+	"help": "the id of the upload_multiqc applet in format project-abc:applet123",
 	"class": "string"
 	},
 	{
